# pub-wise-dev-std

./: .gitignore  README.en.md  README.md
.claude-plugin/: marketplace.json
plugins/wise-dev-std/.claude-plugin/: plugin.json
plugins/wise-dev-std/agents/: stack-architect.md
plugins/wise-dev-std/commands/: env-init.md  implement.md  prd.md  recommend.md  review.md  scaffold.md  standardize.md
plugins/wise-dev-std/data/: trends-cache.yaml
plugins/wise-dev-std/domains/: _schema.md  agriculture.yaml  commerce.yaml  construction.yaml  edtech.yaml  energy-utilities.yaml  finance.yaml  govtech.yaml  healthcare.yaml  hospitality.yaml  ict-saas.yaml  logistics.yaml  manufacturing.yaml  media-gaming.yaml
plugins/wise-dev-std/hooks/: hooks.json
plugins/wise-dev-std/profiles/: _schema.md  android-compose.yaml  bio-rag-research.yaml  flutter-app.yaml  go-gin.yaml  ios-swiftui.yaml  node-next-nest.yaml  python-fastapi.yaml  react-native-app.yaml  rust-axum.yaml
plugins/wise-dev-std/scripts/: detect-prd.sh  export-portable.sh  install-portable.sh  refresh-trends.sh
plugins/wise-dev-std/skills/code-reviewer/: SKILL.md
plugins/wise-dev-std/templates/: AGENTS.md
plugins/wise-dev-std/templates/scaffold/python-fastapi/: Dockerfile  Makefile  Procfile.dev  README.en.md  README.md  docker-compose.yml  pyproject.toml
plugins/wise-dev-std/templates/scaffold/python-fastapi/.github/workflows/: ci.yml
plugins/wise-dev-std/templates/scaffold/python-fastapi/app/: main.py
plugins/wise-dev-std/templates/scaffold/python-fastapi/app/core/: config.py
(+82 files in other folders)
