[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "{{PROJECT_NAME}} — FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5", "honcho>=2"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
